# wtd

./: .gitignore
src/: CMakeLists.txt  builtin.c  builtin.h  config.c  help.c  init_wtd.c  main.c  parse_command.c  remove_wtd.c  rename.c  show.c  td.c  type.c  version.c
